# swagger/api.yaml
@@ -39,6 +39,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserAuthResponse'
+  /api/v1/auth/logout:
+    post:
+      summary: 'Logout a user'
+      operationId: 'logout'
+      responses:
+        '200':
+          description: 'User logged out'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserAuthResponse'
   /api/v1/users:
     get:
       summary: 'Get a list of users'
